--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,33 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu-32s]
+[common_env_data]
+build_flags =
+    -D BUILD_ENV_NAME=$PIOENV
+    -D BUILD_PLATFORM=$PIOPLATFORM
+lib_deps = 
+	madhephaestus/ESP32Servo@^0.11.0
+
+
+[env:nodemcu_32s]
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
+build_flags =
+	${common_env_data.build_flags}
 monitor_speed = 115200
 lib_deps = 
-	madhephaestus/ESP32Servo@^0.11.0
+	${common_env_data.lib_deps}
+
+
+[env:wemos_d1_mini32]
+platform = espressif32
+board = wemos_d1_mini32
+; board_build.mcu = esp32
+; board_build.f_cpu = 240000000L
+framework = arduino
+build_flags =
+	${common_env_data.build_flags}
+monitor_speed = 115200
+lib_deps = 
+	${common_env_data.lib_deps}
