--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env:nodemcu_32s]
+platform = espressif32
+board = nodemcu-32s
+framework = arduino
+monitor_speed = 115200
+lib_deps = 
+	madhephaestus/ESP32Servo@^0.11.0
+
+
 [env:wemos_d1_mini32]
 platform = espressif32
 board = wemos_d1_mini32
