--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,9 @@
 [env:nodemcu_32s]
 platform = espressif32
 board = nodemcu-32s
+build_flags =
+	-DCORE_DEBUG_LEVEL=5
+	-DLOG_LOCAL_LEVEL=5
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
@@ -22,6 +25,9 @@ platform = espressif32
 board = wemos_d1_mini32
 board_build.mcu = esp32
 board_build.f_cpu = 240000000L
+build_flags =
+	-DCORE_DEBUG_LEVEL=5
+	-DLOG_LOCAL_LEVEL=5
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
