CHANGE. 버전별 핀맵 및 코드 분기 처리

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,27 +8,25 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu_32s]
-platform = espressif32
-board = nodemcu-32s
-build_flags =
-	-DCORE_DEBUG_LEVEL=5
-	-DLOG_LOCAL_LEVEL=5
+[platformio]
+default_envs = V2
+
+[env]
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	madhephaestus/ESP32Servo@^0.11.0
+build_flags =
+	-D BUILD_ENV_$PIOENV
+	-DCORE_DEBUG_LEVEL=5
+	-DLOG_LOCAL_LEVEL=5
 
+[env:V1]
+platform = espressif32
+board = nodemcu-32s
 
-[env:wemos_d1_mini32]
+[env:V2]
 platform = espressif32
 board = wemos_d1_mini32
 board_build.mcu = esp32
 board_build.f_cpu = 240000000L
-build_flags =
-	-DCORE_DEBUG_LEVEL=5
-	-DLOG_LOCAL_LEVEL=5
-framework = arduino
-monitor_speed = 115200
-lib_deps = 
-	madhephaestus/ESP32Servo@^0.11.0
